<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fall2018.csc2017.GameCenter.YouWinActivity">

    <TextView
        android:id="@+id/finishView"
        android:layout_width="302dp"
        android:layout_height="85dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="94dp"
        android:text="@string/victory"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="58sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/scoreViewData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreViewData"
        android:layout_width="306dp"
        android:layout_height="173dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        android:text="@string/no_data"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419" />

    <Button
        android:id="@+id/backHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="80dp"
        android:text="@string/back_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seeScoreButton" />

    <Button
        android:id="@+id/seeScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/see_scoreboard"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backHomeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="155dp"
        android:layout_height="64dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="170dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreViewData" />
</android.support.constraint.ConstraintLayout>
