<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/MineGameSettingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="187dp"
        android:text="@string/mine_game_setting"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="22dp"
        android:text="@string/difficulty"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Difficulty_numBooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/Difficulty_numBooms"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/MineConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/MineConfirmButton"
        android:layout_width="166dp"
        android:layout_height="58dp"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="103dp"
        android:text="@string/confirm_and_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
